v/0.5.0/_sources/examples/01_deterministic_workflow.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/01_deterministic_workflow.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_01_deterministic_workflow.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_01_deterministic_workflow.py:


Running Deterministic Inference
===============================

Basic deterministic inference workflow.

This example will demonstrate how to run a simple inference workflow to generate a
basic determinstic forecast using one of the built in models of Earth-2 Inference
Studio.

In this example you will learn:

- How to instantiate a built in prognostic model
- Creating a data source and IO object
- Running a simple built in workflow
- Post-processing results

.. GENERATED FROM PYTHON SOURCE LINES 37-42

Set Up
------
All workflows inside Earth2Studio require constructed components to be
handed to them. In this example, let's take a look at the most basic:
:py:meth:`earth2studio.run.deterministic`.

.. GENERATED FROM PYTHON SOURCE LINES 44-48

.. literalinclude:: ../../earth2studio/run.py
   :language: python
   :start-after: # sphinx - deterministic start
   :end-before: # sphinx - deterministic end

.. GENERATED FROM PYTHON SOURCE LINES 50-55

Thus, we need the following:

- Prognostic Model: Use the built in FourCastNet Model :py:class:`earth2studio.models.px.FCN`.
- Datasource: Pull data from the GFS data api :py:class:`earth2studio.data.GFS`.
- IO Backend: Let's save the outputs into a Zarr store :py:class:`earth2studio.io.ZarrBackend`.

.. GENERATED FROM PYTHON SOURCE LINES 57-78

.. code-block:: Python

    import os

    os.makedirs("outputs", exist_ok=True)
    from dotenv import load_dotenv

    load_dotenv()  # TODO: make common example prep function

    from earth2studio.data import GFS
    from earth2studio.io import ZarrBackend
    from earth2studio.models.px import FCN

    # Load the default model package which downloads the check point from NGC
    package = FCN.load_default_package()
    model = FCN.load_model(package)

    # Create the data source
    data = GFS()

    # Create the IO handler, store in memory
    io = ZarrBackend()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    2025-03-27 04:23:37.043 | WARNING  | earth2studio.models.auto.ngc:__init__:109 - Using NGC guest mode, which may fail due to unauthorized access. Consider using a valid NGC API key.
    /usr/lib/python3.12/tarfile.py:2254: DeprecationWarning: Python 3.14 will, by default, filter extracted tar archives and reject files or modify their metadata. Use the filter argument to control this behavior.
      warnings.warn(
    /usr/local/lib/python3.12/dist-packages/physicsnemo/registry/model_registry.py:48: DeprecationWarning: Model SFNO is being loaded from the 'modulus.models' group. This probably means it is being exposed from a package that has not yet been updated to use the 'physicsnemo.models' group. This group may be removed in a future release. Please contact the package maintainer to update the entry point.
      cls._shared_state["_model_registry"] = cls._construct_registry()




.. GENERATED FROM PYTHON SOURCE LINES 79-88

Execute the Workflow
--------------------
With all components initialized, running the workflow is a single line of Python code.
Workflow will return the provided IO object back to the user, which can be used to
then post process. Some have additional APIs that can be handy for post-processing or
saving to file. Check the API docs for more information.

For the forecast we will predict for two days (these will get executed as a batch) for
20 forecast steps which is 5 days.

.. GENERATED FROM PYTHON SOURCE LINES 90-97

.. code-block:: Python

    import earth2studio.run as run

    nsteps = 20
    io = run.deterministic(["2024-01-01"], nsteps, model, data, io)

    print(io.root.tree())





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    2025-03-27 04:23:40.978 | INFO     | earth2studio.run:deterministic:75 - Running simple workflow!
    2025-03-27 04:23:40.978 | INFO     | earth2studio.run:deterministic:82 - Inference device: cuda
    /home/jenkins/agent/workspace/Studio-Build-Docs/repo/earth2studio/utils/time.py:38: DeprecationWarning: datetime.datetime.utcfromtimestamp() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.fromtimestamp(timestamp, datetime.UTC).
      time = [datetime.utcfromtimestamp((date - _unix) / _ds) for date in time]
    2025-03-27 04:23:41.144 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:214 - Fetching GFS index file: 2024-01-01 00:00:00 lead 0:00:00
    Fetching GFS for 2024-01-01 00:00:00:   0%|          | 0/26 [00:00<?, ?it/s]                                                                                2025-03-27 04:23:41.155 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: u10m at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:   0%|          | 0/26 [00:00<?, ?it/s]    Fetching GFS for 2024-01-01 00:00:00:   4%|▍         | 1/26 [00:00<00:20,  1.25it/s]                                                                                        2025-03-27 04:23:41.957 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: v10m at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:   4%|▍         | 1/26 [00:00<00:20,  1.25it/s]                                                                                        2025-03-27 04:23:42.001 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: t2m at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:   4%|▍         | 1/26 [00:00<00:20,  1.25it/s]                                                                                        2025-03-27 04:23:42.028 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: sp at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:   4%|▍         | 1/26 [00:00<00:20,  1.25it/s]    Fetching GFS for 2024-01-01 00:00:00:  15%|█▌        | 4/26 [00:00<00:04,  5.48it/s]                                                                                        2025-03-27 04:23:42.071 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: msl at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  15%|█▌        | 4/26 [00:00<00:04,  5.48it/s]                                                                                        2025-03-27 04:23:42.134 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: t850 at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  15%|█▌        | 4/26 [00:00<00:04,  5.48it/s]    Fetching GFS for 2024-01-01 00:00:00:  23%|██▎       | 6/26 [00:01<00:02,  7.89it/s]                                                                                        2025-03-27 04:23:42.180 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: u1000 at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  23%|██▎       | 6/26 [00:01<00:02,  7.89it/s]                                                                                        2025-03-27 04:23:42.233 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: v1000 at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  23%|██▎       | 6/26 [00:01<00:02,  7.89it/s]    Fetching GFS for 2024-01-01 00:00:00:  31%|███       | 8/26 [00:01<00:01, 10.08it/s]                                                                                        2025-03-27 04:23:42.290 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: z1000 at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  31%|███       | 8/26 [00:01<00:01, 10.08it/s]                                                                                        2025-03-27 04:23:42.326 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: u850 at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  31%|███       | 8/26 [00:01<00:01, 10.08it/s]                                                                                        2025-03-27 04:23:42.368 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: v850 at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  31%|███       | 8/26 [00:01<00:01, 10.08it/s]    Fetching GFS for 2024-01-01 00:00:00:  42%|████▏     | 11/26 [00:01<00:01, 13.93it/s]                                                                                         2025-03-27 04:23:42.405 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: z850 at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  42%|████▏     | 11/26 [00:01<00:01, 13.93it/s]                                                                                         2025-03-27 04:23:42.442 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: u500 at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  42%|████▏     | 11/26 [00:01<00:01, 13.93it/s]                                                                                         2025-03-27 04:23:42.478 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: v500 at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  42%|████▏     | 11/26 [00:01<00:01, 13.93it/s]    Fetching GFS for 2024-01-01 00:00:00:  54%|█████▍    | 14/26 [00:01<00:00, 16.90it/s]                                                                                         2025-03-27 04:23:42.524 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: z500 at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  54%|█████▍    | 14/26 [00:01<00:00, 16.90it/s]                                                                                         2025-03-27 04:23:42.571 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: t500 at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  54%|█████▍    | 14/26 [00:01<00:00, 16.90it/s]                                                                                         2025-03-27 04:23:42.615 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: z50 at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  54%|█████▍    | 14/26 [00:01<00:00, 16.90it/s]    Fetching GFS for 2024-01-01 00:00:00:  65%|██████▌   | 17/26 [00:01<00:00, 18.60it/s]                                                                                         2025-03-27 04:23:42.656 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: r500 at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  65%|██████▌   | 17/26 [00:01<00:00, 18.60it/s]                                                                                         2025-03-27 04:23:42.705 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: r850 at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  65%|██████▌   | 17/26 [00:01<00:00, 18.60it/s]                                                                                         2025-03-27 04:23:42.757 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: tcwv at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  65%|██████▌   | 17/26 [00:01<00:00, 18.60it/s]    Fetching GFS for 2024-01-01 00:00:00:  77%|███████▋  | 20/26 [00:01<00:00, 19.59it/s]                                                                                         2025-03-27 04:23:42.793 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: u100m at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  77%|███████▋  | 20/26 [00:01<00:00, 19.59it/s]                                                                                         2025-03-27 04:23:42.837 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: v100m at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  77%|███████▋  | 20/26 [00:01<00:00, 19.59it/s]                                                                                         2025-03-27 04:23:42.873 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: u250 at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  77%|███████▋  | 20/26 [00:01<00:00, 19.59it/s]    Fetching GFS for 2024-01-01 00:00:00:  88%|████████▊ | 23/26 [00:01<00:00, 20.97it/s]                                                                                         2025-03-27 04:23:42.916 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: v250 at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  88%|████████▊ | 23/26 [00:01<00:00, 20.97it/s]                                                                                         2025-03-27 04:23:42.962 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: z250 at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  88%|████████▊ | 23/26 [00:01<00:00, 20.97it/s]                                                                                         2025-03-27 04:23:43.006 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:260 - Fetching GFS grib file for variable: t250 at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  88%|████████▊ | 23/26 [00:01<00:00, 20.97it/s]    Fetching GFS for 2024-01-01 00:00:00: 100%|██████████| 26/26 [00:01<00:00, 21.84it/s]    Fetching GFS for 2024-01-01 00:00:00: 100%|██████████| 26/26 [00:01<00:00, 13.79it/s]
    2025-03-27 04:23:43.113 | SUCCESS  | earth2studio.run:deterministic:106 - Fetched data from GFS
    2025-03-27 04:23:43.123 | INFO     | earth2studio.run:deterministic:136 - Inference starting!
    Running inference:   0%|          | 0/21 [00:00<?, ?it/s]    Running inference:   5%|▍         | 1/21 [00:01<00:20,  1.03s/it]    Running inference:  10%|▉         | 2/21 [00:02<00:27,  1.44s/it]    Running inference:  14%|█▍        | 3/21 [00:04<00:26,  1.46s/it]    Running inference:  19%|█▉        | 4/21 [00:05<00:25,  1.47s/it]    Running inference:  24%|██▍       | 5/21 [00:07<00:23,  1.49s/it]    Running inference:  29%|██▊       | 6/21 [00:08<00:22,  1.50s/it]    Running inference:  33%|███▎      | 7/21 [00:10<00:21,  1.54s/it]    Running inference:  38%|███▊      | 8/21 [00:11<00:20,  1.56s/it]    Running inference:  43%|████▎     | 9/21 [00:13<00:19,  1.59s/it]    Running inference:  48%|████▊     | 10/21 [00:15<00:17,  1.62s/it]    Running inference:  52%|█████▏    | 11/21 [00:16<00:16,  1.63s/it]    Running inference:  57%|█████▋    | 12/21 [00:18<00:14,  1.66s/it]    Running inference:  62%|██████▏   | 13/21 [00:20<00:13,  1.69s/it]    Running inference:  67%|██████▋   | 14/21 [00:22<00:12,  1.72s/it]    Running inference:  71%|███████▏  | 15/21 [00:24<00:10,  1.74s/it]    Running inference:  76%|███████▌  | 16/21 [00:25<00:08,  1.76s/it]    Running inference:  81%|████████  | 17/21 [00:27<00:07,  1.80s/it]    Running inference:  86%|████████▌ | 18/21 [00:29<00:05,  1.82s/it]    Running inference:  90%|█████████ | 19/21 [00:31<00:03,  1.84s/it]    Running inference:  95%|█████████▌| 20/21 [00:33<00:01,  1.92s/it]    Running inference: 100%|██████████| 21/21 [00:35<00:00,  1.97s/it]    Running inference: 100%|██████████| 21/21 [00:35<00:00,  1.70s/it]
    2025-03-27 04:24:18.827 | SUCCESS  | earth2studio.run:deterministic:146 - Inference complete
    /
     ├── lat (720,) float64
     ├── lead_time (21,) timedelta64[h]
     ├── lon (1440,) float64
     ├── msl (1, 21, 720, 1440) float32
     ├── r500 (1, 21, 720, 1440) float32
     ├── r850 (1, 21, 720, 1440) float32
     ├── sp (1, 21, 720, 1440) float32
     ├── t250 (1, 21, 720, 1440) float32
     ├── t2m (1, 21, 720, 1440) float32
     ├── t500 (1, 21, 720, 1440) float32
     ├── t850 (1, 21, 720, 1440) float32
     ├── tcwv (1, 21, 720, 1440) float32
     ├── time (1,) datetime64[ns]
     ├── u1000 (1, 21, 720, 1440) float32
     ├── u100m (1, 21, 720, 1440) float32
     ├── u10m (1, 21, 720, 1440) float32
     ├── u250 (1, 21, 720, 1440) float32
     ├── u500 (1, 21, 720, 1440) float32
     ├── u850 (1, 21, 720, 1440) float32
     ├── v1000 (1, 21, 720, 1440) float32
     ├── v100m (1, 21, 720, 1440) float32
     ├── v10m (1, 21, 720, 1440) float32
     ├── v250 (1, 21, 720, 1440) float32
     ├── v500 (1, 21, 720, 1440) float32
     ├── v850 (1, 21, 720, 1440) float32
     ├── z1000 (1, 21, 720, 1440) float32
     ├── z250 (1, 21, 720, 1440) float32
     ├── z50 (1, 21, 720, 1440) float32
     ├── z500 (1, 21, 720, 1440) float32
     └── z850 (1, 21, 720, 1440) float32




.. GENERATED FROM PYTHON SOURCE LINES 98-105

Post Processing
---------------
The last step is to post process our results. Cartopy is a great library for plotting
fields on projections of a sphere. Here we will just plot the temperature at 2 meters
(t2m) 1 day into the forecast.

Notice that the Zarr IO function has additional APIs to interact with the stored data.

.. GENERATED FROM PYTHON SOURCE LINES 107-137

.. code-block:: Python

    import cartopy.crs as ccrs
    import matplotlib.pyplot as plt

    forecast = "2024-01-01"
    variable = "t2m"
    step = 4  # lead time = 24 hrs

    plt.close("all")
    # Create a Robinson projection
    projection = ccrs.Robinson()

    # Create a figure and axes with the specified projection
    fig, ax = plt.subplots(subplot_kw={"projection": projection}, figsize=(10, 6))

    # Plot the field using pcolormesh
    im = ax.pcolormesh(
        io["lon"][:],
        io["lat"][:],
        io[variable][0, step],
        transform=ccrs.PlateCarree(),
        cmap="Spectral_r",
    )

    # Set title
    ax.set_title(f"{forecast} - Lead time: {6*step}hrs")

    # Add coastlines and gridlines
    ax.coastlines()
    ax.gridlines()
    plt.savefig("outputs/01_t2m_prediction.jpg")



.. image-sg:: /examples/images/sphx_glr_01_deterministic_workflow_001.png
   :alt: 2024-01-01 - Lead time: 24hrs
   :srcset: /examples/images/sphx_glr_01_deterministic_workflow_001.png, /examples/images/sphx_glr_01_deterministic_workflow_001_2_00x.png 2.00x
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /usr/local/lib/python3.12/dist-packages/cartopy/io/__init__.py:241: DownloadWarning: Downloading: https://naturalearth.s3.amazonaws.com/110m_physical/ne_110m_coastline.zip
      warnings.warn(f'Downloading: {url}', DownloadWarning)





.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 56.387 seconds)


.. _sphx_glr_download_examples_01_deterministic_workflow.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 01_deterministic_workflow.ipynb <01_deterministic_workflow.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 01_deterministic_workflow.py <01_deterministic_workflow.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: 01_deterministic_workflow.zip <01_deterministic_workflow.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
